Your commit message here

--- a/config/config.env
+++ b/config/config.env
@@ -1,9 +1,9 @@
 const hello 
  PORT = 4000
-DB_URL=mongodb://localhost:27017/SocialMedia
+DB_URL=mongodb+srv://karankumar2004122:HTML5CSS3@cluster0.cleb4ux.mongodb.net/
 JWT_SECRET=KARANKSNJFKSDMSDMSD
 
-FRONTEND_ORIGIN=http://localhost:3000
+FRONTEND_ORIGIN=https://social-media-project-two.vercel.app/
 
 
 
